--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.h2.console.enabled=true
 spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:course-library-management-system;MV_STORE=false
+
+//spring.datasource.url=jdbc:h2:mem:course-library-management-system
+spring.datasource.username=sa
+spring.datasource.password=your_password
 spring.jpa.hibernate.ddl-auto=update
